--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,39 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  get: ^4.7.3
+  jiffy: ^6.4.4
+  intl: ^0.20.2
+  http: ^1.6.0
+  cached_network_image: ^3.4.1
+  image_picker: ^1.2.1
+  show_up_animation: ^2.1.2
+  auto_animated: ^3.2.0
+  flutter_polyline_points: ^3.1.0
+  google_maps_flutter: ^2.14.0
+  geolocator: ^14.0.2
+  geocoding: ^4.0.0
+  firebase_messaging: ^16.0.4
+  firebase_core: ^4.2.1
+  flutter_local_notifications: ^19.5.0
+  cloud_firestore: ^6.1.0
+  sqflite: ^2.4.2
+  shared_preferences: ^2.5.3
+  path: ^1.9.1
+  qr_flutter: ^4.1.0
+  mobile_scanner: ^3.5.5
+  grouped_list: ^6.0.0
+  url_launcher: ^6.3.2
+  dropdown_search: ^6.0.2
+  badges: ^3.1.2
+  flutter_svg: ^2.2.3
+  font_awesome_flutter: ^10.12.0
+  fluttericon: ^2.0.0
+  dartz: ^0.10.1
+  google_sign_in: ^7.2.0
+  device_preview: ^1.3.1
+  responsive_builder: ^0.7.1
+  image_pickers: ^2.0.6
 
 dev_dependencies:
   flutter_test:
