--- a/Ecommerce_UI/pubspec.yaml
+++ b/Ecommerce_UI/pubspec.yaml
@@ -68,6 +68,7 @@ dependencies:
   responsive_builder: ^0.7.1
   image_pickers: ^2.0.6
   flutter_otp_text_field: ^1.5.1+1
+  lottie: ^3.3.2
 
 dev_dependencies:
   flutter_test:
@@ -94,6 +95,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/lottie/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
